[package]
name = "ft"
description = "A command line tool to manage, test and run your 42 projects."
authors = ["Herbie Vine <me@herbievine.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1", features = ["derive"] }
toml = "0.7.3"
