[package]
name = "ftcli"
description = "A command line tool to manage, test and run your 42 projects."
authors = ["Herbie Vine <me@herbievine.com>"]
license = "MIT"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
